# svn-sonar

./: Makefile.am  README  bootstrap.sh  configure.ac
docs/: Makefile.am
include/: Makefile.am
include/sonar/: Makefile.am  ngramserver.h
sonar/docs/: tel.1
sonar/src/: tel.cxx
src/: Makefile.am  alto.cxx  cleanup.cxx  ngramserver.cxx
